assets/styles/themes.scss
.game-container {
  display: none;
  margin: 120px auto 0;
}

.gameboard {
  display: grid;
  width: 350px;
  height: 350px;
  margin: 0 auto;
  background-color: $white;
  border: 4px solid $footer;
  border-radius: 10px;
  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
}

.box {
  border: 2px solid $footer;
  border-radius: 2px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 25px;
  &:hover {
    background-color: $hover;
  }
}

.error-message {
  color: $white;
}

.success-message {
  color: $white;
}

.hidden {
  display: none;
}

body {
  background-color: $background;
}

#sign-out-btn {
  display: none;
  margin: 0 auto;
}

#change-pass-btn {
  display: none;
  margin: 0 auto;
}

.forms {
  width: 100%;
  position: absolute;
  text-align: center;
  #sign-up-form {
    display: none;
    margin: 0 auto;
  }
    #sign-in-form {
      display: none;
      margin: 0 auto;
    }
    #change-password-form {
        display: none;
        margin: 0 auto;
    }
}

.messagegrid {
  // position: absolute;
  display: flex;
  align-items: center;
  width: 100%;
  font-size: 25px;
  justify-content: center;
  flex-direction: column;
  margin-top: 20px;
  #message{
    margin: 10px 10px;
  }
  #message-box {
    margin: 10px 10px;
  }
}

.bottom-btn {
  display: flex;
  align-items: center;
  width: 100%;
  justify-content: center;
  margin-top: 20px;
  #get-games {
    display: none;
  }
  #create-games {
    display: none;
  }
}

footer {
text-transform: uppercase;
padding: 0 20px;
background-color: $footer;
color: $white;
font-size: 14px;
letter-spacing: .08em;
font-weight: 500;
bottom: 0;
position: absolute;
width: 100%;
text-align: center;
}

.clearfix:after {
visibility: hidden;
display: block;
content: ' ';
clear: both;
height: 0;
font-size: 0;
}

.name{
	color: $name;
	font-weight: 700;
}

